# Rosetta

./: .env.example  .gitignore  .last-branch  CLAUDE.md  prd.json  progress.txt  pyproject.toml
docs/: clarify.md  progress.md  rosetta-architecture.docx  rosetta-implementation.md
rosetta/: __init__.py
rosetta/analysis/: gwas.py
rosetta/ssot/: decision_log.py  hypothesis_graph.py  queue.py  schema.py
scripts/: progress.txt
tasks/: prd-rosetta-p2-agents.md  prd-sprint2-agent-wiring.md
tests/: conftest.py  test_analysis.py  test_hypothesis_graph.py  test_ssot.py
